2005-11-20  Russell Bryant  <russell@digium.com>

	* Makefile apps/Makefile: Fix 'make install' for Solaris. (issue #5775)

	* apps/app_record.c: Don't leak a frame if writing it to the file fails. (issue #5787)

	* Makefile: Create the monitor spool directory when the other spool directories are created.

	* channels/chan_sip.c channels/chan_iax2.c: Change warning messages about the number of scheduled events happening all at once to debug messages. (issue #5794)

	* pbx/pbx_spool.c: Fix crash when a value is not specified with a variable on a Set: line in a call file. (issue #5806)

	* apps/app_meetme.c: Fix the 'X' option to the MeetMe application. (issue #5773)

	* apps/app_voicemail.c: Correct the use of a mailbox entered by the calling party instead of indicated as an argument to the Voicemail application. (issue #5774)

	* apps/app_controlplayback.c: Fix logic in checking for success when jumping to priority n+101.
	* apps/app_md5.c: Fix logic in checking for success when jumping to priority n+101.

	* apps/app_hasnewvoicemail.c: Fix a typo in the application description.  Also, fix the logic in checking for success when jumping to priority n+101. (issue #5795) 

	* UPGRADE.txt: Add a note on a second way that the IAX2 channel naming convention has changed. (issue #5792)
	* channels/chan_iax2.c: Fix alignment of the output for the "iax2 show peer <peer>" CLI command (issue #5792)

	* channels/Makefile: Re-add chan_oss to the default build. (issue #5799)

	* res/res_musiconhold.c: Fix incorrect argument for the buffer size to an ast_copy_string call (issue #5803)

	* funcs/func_enum.c: Shorten the module description (issue #5791)

2005-11-17  Russell Bryant  <russell@digium.com>

	* Makefile: Fix the output of Makefile generated variables to doxygen

	* channels/chan_sip.c: Add missing carriage return and line feed to the SDP line indicating that we don't support VAD (issue #5780)

2005-11-16  Kevin P. Fleming  <kpfleming@digium.com>
